* pic/dpost: The PostScript implementation of the "Dl" (draw line)
  operation now rounds the current point to the troff device resolution
  when testing for equality. This is another fix for "box fill 0" in pic.
* troff/dpost: A "x X LC_CTYPE localename" device command has been added.
  This ensures that troff and dpost use the same locale for generating
  PDF bookmark entries.

Release 060208
* troff: Eastern European characters for Unicode/PostScript conversion
  have been added (patch by Vladimir B. Machulsky).
* troff, dpost: Font file names can now contain spaces or bytes outside
  the ASCII range. A "%xx" escape sequence, where "xx" are hexadecimal
  digits, has been introduced in order to achieve this. The description
  of ".fp" in the "NEWS" file contains details on this.
* [nt]roff: The ".vpt" request has been added to make it possible to
  disable vertical position traps.
* dpost: With the ".track" command, the tracking amount was not properly
  initialized at every page of PostScript output. This could result in
  incorrect arrangements of characters.
* [nt]roff: Diagnostic messages now include the number of the current
  output page.
* [nt]roff: Page breaks inside a diversion are now properly ignored.
* dpost: When a font was mounted replacing another font on the same
  physical position, non-ASCII characters were not printed correctly
  afterwards (bug reported by Vladimir B. Machulsky).
* dpost: The BookMark device command now causes "/XYZ" destination keys
  to be written to PDF documents. This has the effect that the current
  zoom factor is retained when a bookmark is selected.
* pic, grap: Fixed 8-bit input in label texts (bug reported by Vladimir
  B. Machulsky).
* troff: The ".trimat", ".bleedat", and ".cropat" requests caused some
  following requests (e.g. ".fp") to fail because of an improper reset
  of number scaling (bug reported by Sebastian Leusch).
* troff: If the "\~" character appeared as part of the first word of